--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
-sudo: false
 language: node_js
-node_js:
-  - 6
-scripts: npm test
+node_js: 7
+before_install: npm i -g npm
+after_success: npm run coveralls
