--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,9 @@
 language: node_js
-node_js: 7
-before_install: npm i -g npm
-after_success: npm run coveralls
+node_js:
+  - 8
+  - 7
+  - 6
+  - 5
+  - 4
+before_install:
+  - npm i -g npm
