--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"repository": "cjpatoilo/initify",
 	"license": "MIT",
 	"author": "CJ Patoilo <cjpatoilo@gmail.com>",
-	"bin": "bin/cli.js",
+	"bin": "index.js",
 	"keywords": [
 		"boilerplate",
 		"opensource",
@@ -22,18 +22,18 @@
 		".travis.yml"
 	],
 	"dependencies": {
-		"commander": "^2.11.0"
+		"rasper": "*"
 	},
 	"devDependencies": {
-		"ava": "^0.21.0",
+		"ava": "^0.25.0",
 		"editorconfig-tools": "^0.1.1",
-		"eslint": "^4.4.1",
-		"eslint-config-styled": "0.0.0",
+		"eslint": "^4.17.0",
+		"eslint-config-styled": "0.0.2",
 		"husky": "^0.14.3",
-		"nyc": "^11.1.0"
+		"nyc": "^11.4.1"
 	},
 	"engines": {
-		"node": ">=4"
+		"node": ">=6"
 	},
 	"scripts": {
 		"precommit": "npm t",
