--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 	"dependencies": {
 		"fs-extra": "^5.0.0",
 		"gitconfig": "^2.0.3",
-		"rasper": "*"
+		"rasper": "latest"
 	},
 	"devDependencies": {
 		"ava": "^0.25.0",
