--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "initify",
 	"version": "0.2.2",
-	"description": "The easy way to start Open Source projects.",
+	"description": "A meaningful Open Source Boilerplate – easy as cake!",
 	"homepage": "https://cjpatoilo.com/initify",
 	"repository": "cjpatoilo/initify",
 	"license": "MIT",
