--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"github"
 	],
 	"ignore": [
+		"artwork.psd",
 		".appveyor.yml",
 		".editorconfig",
 		".github",
@@ -28,16 +29,20 @@
 	},
 	"devDependencies": {
 		"ava": "^0.25.0",
+		"boeing": "latest",
 		"editorconfig-tools": "^0.1.1",
 		"eslint": "^4.17.0",
 		"eslint-config-styled": "0.0.2",
 		"husky": "^0.14.3",
-		"nyc": "^11.4.1"
+		"marshmallow": "latest",
+		"nyc": "^11.4.1",
+		"rimraf": "^2.6.2"
 	},
 	"engines": {
 		"node": ">=6"
 	},
 	"scripts": {
+		"prepush": "marshmallow -o docs -i artwork.psd -f -m && boeing docs && rimraf docs",
 		"precommit": "npm t",
 		"test": "nyc ava && eslint . -c styled --ignore-path .gitignore && editorconfig-tools check ."
 	}
